# SLCM-is-Dumb

./: .env  .env.example  .gitignore  HowThiswWorks.md  README.md  cgpa_element_discovery.py  check.py  config.py  data_models.py  dom_diagnostic_results.json  element_discovery.py  exceptions.py  install_deps.py  ollama_test.py  pyproject.toml  requirements.txt  scraper.py  utils.py
drivers/: requirements.txt
scraper_env/: pyvenv.cfg
scraper_env/Scripts/: activate  activate.bat  activate.fish
